# sa-fbb-experience-workbench

./: .gitignore  AGENTS.common.md  AGENTS.md  AGENTS.project.md  README.md  index.html  package.json  vite.config.ts
database/migrations/: 001_core_schema.sql  002_complete_app_schema.sql  003_mapping_schema.sql  004_observability_schema.sql  005_pipeline_schema.sql  006_analytics_dashboard_schema.sql
database/seeds/: 001_app_mapping_seed.sql  002_default_mapping_seed.sql
docs/changes/: CHANGELOG-1.0.33.txt  (+1 more)
scripts/: check_quality_report_contract.py  check_quality_report_readonly_command_guard.py  check_quality_report_sql.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ads_hour.rs  ads_lead.rs  ads_net.rs  ads_user.rs  analysis_commands.rs  analytics_ads_app.rs  analytics_app_commands.rs  analytics_commands.rs  analytics_hourly_commands.rs  analytics_lead_commands.rs  analytics_lead_page_commands.rs  analytics_network_commands.rs  analytics_user_commands.rs  batch_tables.rs  config_commands.rs  dashboard_commands.rs  dataset_profile_commands.rs  db.rs  etl_commands.rs  final_fusion.rs  header_normalizer.rs  import_commands.rs  import_commands_mapped.rs  import_pipeline_commands.rs  inspection_commands.rs  job_inspection_commands.rs  job_inspector.rs  job_runner.rs  lead_commands.rs  lib.rs  main.rs  mapping_catalog.rs  mapping_result_commands.rs  mapping_validation_commands.rs  migrations.rs  models.rs  phase_commands.rs  probe.rs  quality_result_commands.rs  raw_import.rs  (+2 more)
(+81 files in other folders)
