[package]
name = "sa-fbb-experience-workbench"
version = "1.0.21"
description = "Local SA FBB experience analytics workbench"
authors = ["zhou-yang-personal"]
edition = "2021"

[lib]
name = "sa_fbb_experience_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql = "25"
csv = "1.3"
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
